--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ tokio = { version = "1.45.0", features = ["full"] }
 tower-http = { version = "0.6.4", features = ["cors", "trace"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["fmt", "chrono", "env-filter"] }
+utoipa = "5.3.1"
+utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
