--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -13,3 +13,5 @@ tokio.workspace = true
 tower-http.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+utoipa = { workspace = true }
+utoipa-swagger-ui = { workspace = true, features = ["axum"] }
