feat: add database

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [workspace]
 resolver = "3"
-members = ["api"]
+members = ["api", "crates/database"]
 
 [workspace.dependencies]
 anyhow = "1.0.98"
 axum = { version = "0.8.4", features = ["macros"] }
 config = { version = "0.15.11", default-features = false }
+database = { version = "0.1.0", path = "crates/database" }
 serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.12"
 tokio = { version = "1.45.0", features = ["full"] }
