--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2024"
 anyhow.workspace = true
 axum.workspace = true
 config.workspace = true
+database.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tower-http.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
-utoipa = { workspace = true }
-utoipa-swagger-ui = { workspace = true, features = ["axum"] }
+utoipa.workspace = true
+utoipa-swagger-ui.workspace = true
