--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -11,6 +11,7 @@ config.workspace = true
 database.workspace = true
 jsonwebtoken.workspace = true
 serde.workspace = true
+sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono"] }
 thiserror.workspace = true
 tokio.workspace = true
 tower-http.workspace = true
