--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow.workspace = true
 axum.workspace = true
 axum-extra = { version = "0.10.1", features = ["typed-header"] }
+bcrypt = "0.17.0"
 config.workspace = true
 database.workspace = true
 jsonwebtoken.workspace = true
