--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -11,6 +11,7 @@ bcrypt = "0.17.0"
 config.workspace = true
 database.workspace = true
 jsonwebtoken.workspace = true
+oauth2 = "5.0.0"
 serde.workspace = true
 sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
 thiserror.workspace = true
