--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -12,6 +12,8 @@ config.workspace = true
 database.workspace = true
 jsonwebtoken.workspace = true
 oauth2 = "5.0.0"
+rand = "0.9.1"
+reqwest = { version = "0.12.15", features = ["json"] }
 serde.workspace = true
 sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
 thiserror.workspace = true
