--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,20 @@
-[workspace]
-resolver = "3"
-members = ["api", "crates/database"]
+[package]
+name = "book-store-server"
+version = "0.1.0"
+edition = "2024"
 
-[workspace.dependencies]
+[dependencies]
 anyhow = "1.0.98"
 axum = { version = "0.8.4", features = ["macros"] }
+axum-extra = { version = "0.10.1", features = ["typed-header"] }
+bcrypt = "0.17.0"
 config = { version = "0.15.11", default-features = false }
-database = { version = "0.1.0", path = "crates/database" }
 jsonwebtoken = "9.3.1"
+oauth2 = "5.0.0"
+rand = "0.9.1"
+reqwest = { version = "0.12.15", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
+sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
 thiserror = "2.0.12"
 tokio = { version = "1.45.0", features = ["full"] }
 tower-http = { version = "0.6.4", features = ["cors", "trace"] }
@@ -16,3 +22,4 @@ tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["fmt", "chrono", "env-filter"] }
 utoipa = "5.3.1"
 utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
+uuid = { version = "1.16.0", features = ["v4", "fast-rng", "serde"] }
