--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.98"
 axum = { version = "0.8.4", features = ["macros"] }
-axum-extra = { version = "0.10.1", features = ["typed-header"] }
+axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
 bcrypt = "0.17.0"
 config = { version = "0.15.11", default-features = false }
 jsonwebtoken = "9.3.1"
