--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,13 @@ edition = "2024"
 anyhow = "1.0.98"
 async-stream = "0.3.6"
 axum = { version = "0.8.4", features = ["macros"] }
-axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
+axum-extra = { version = "0.10.1", features = ["typed-header"] }
 bcrypt = "0.17.0"
 config = { version = "0.15.11", default-features = false }
 futures = "0.3.31"
 jsonwebtoken = "9.3.1"
 oauth2 = "4.4.2"
+ollama-rs = "0.3.1"
 rand = "0.9.1"
 reqwest = { version = "0.12.15", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
