--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ async-stream = "0.3.6"
 axum = { version = "0.8.4", features = ["macros"] }
 axum-extra = { version = "0.10.1", features = ["typed-header"] }
 bcrypt = "0.17.0"
+chrono = "0.4.41"
 config = { version = "0.15.11", default-features = false }
 futures = "0.3.31"
 jsonwebtoken = "9.3.1"
