--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ ollama-rs = "0.3.1"
 rand = "0.9.1"
 reqwest = { version = "0.12.15", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
 thiserror = "2.0.12"
 tokio = { version = "1.45.0", features = ["full"] }
